Fixed safari rewards section alignement issue

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -56,6 +56,11 @@ a {
 		justify-content: center;
 		align-items: flex-start;
 	}
+	&-center-left {
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+	}
     &-column {
 		display: flex;
 		flex-direction: column;
